# personal_assistant

./: .cursorignore  .cursorrules  .gitignore  aiguidelines.md
Agents/NotionAgent/: .cursorignore  .cursorrules  .dockerignore  ALREADY_DONE.md  BACKLOG.md  Dockerfile  README.md  TODO.md  __init__.py  agentState.py  agentTools.py  agents.py  asyncClientManager.py  blockCache.py  blockTree.py  chat.py  compose.yaml  dashboard.py  docker_compose.yaml  graph.py  index.py  install_dev.py  log_viewer.py  notion_client.py  plannerGraph.py  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements-dev.txt  requirements.txt  setup.md  setup.py  urlIndex.py  utils.py  uuid_converter.py  writerGraph.py
Agents/NotionAgent/.cursor/: mcp.json
Agents/NotionAgent/.cursor/rules/: architecture.mdc  blockCache.mdc  captionGeneration.mdc  context.mdc  favourites.mdc  fetchNotion.mdc  importCommon.mdc  notionClientArchitecture.mdc  overview.mdc  planner.mdc  writer.mdc
Agents/NotionAgent/.notes/: 2024-07-26_marimo_dashboard_and_testing_issues.md  BlockManagerRefactoring.md  RefactoringPlanExample - Cache Prefix.md  agent_testing_guidelines.md  blockHandlingRefactoring.md  dependencies_docker.md  langfuseUnhashableDict.md
Agents/NotionAgent/.notes/failed_plans/: eliminate-path-manipulations.md  path-manipulation-refactoring-report.md
Agents/NotionAgent/.notes/issues/: Multiple issues.md  Multiple object-type-handling-mistakes.md  NotionGetChildrenToolRemoval.md  blockdict-implementation.md  infinite-recursion-fix.md  recursive-block-fetching.md
Agents/NotionAgent/Agent/: __init__.py  agentState.py  agentTools.py  agents.py  graph.py  plannerGraph.py  writerGraph.py
Agents/NotionAgent/Agent/.notes/: fixedCallToolFailedWithDecode.md  fixedEmptyNamesInDb.md
Agents/NotionAgent/DOCS/: docker_httpx_issue_fix.md  docker_httpx_issue_fix2.md  marimo_button_state_management.md  notionMCPservers.md
Agents/NotionAgent/TASKS/: dashboard-server-mode.md  dockerize-rest-server-uv-plan.md  dockerize-rest-server.md  import-inventory.json  marimo-dashboard-setup.md  restServer.md  simplify-dependencies-plan.md  uv-migration-plan.md
Agents/NotionAgent/TASKS/DONE/: dashboard-server-mode.md  dockerize-rest-server-uv-plan.md  mock-chat-in-rest-server-tests.md  restServer.md
Agents/NotionAgent/TASKS/FAILED/: langchain-openai-proxies-compatibility-issue.md
Agents/NotionAgent/launcher/: __init__.py  chat.py  dashboard.py  docker_manager.py  rest_server.py
Agents/NotionAgent/operations/: __init__.py  blockCache.py  blockDict.py  blockHolder.py  blockIndex.py  blockManager.py  blockTree.py  cacheOrchestrator.py  exceptions.py  index.py  notionAPIClient.py  notionService.py  notion_client.py  utils.py  uuid_converter.py
Agents/NotionAgent/operations/blocks/: __init__.py  index.py  (+4 more)
Agents/NotionAgent/saved_logs/: agentResponse.json  integracjaZNotion.md  notionAgentResponse.json
Agents/NotionAgent/test/: test_block_cache.py  test_block_tree.py  test_favourites.py  test_notion_client.py
Agents/NotionAgent/tests/: __init__.py  test_background_processor.py  test_block_cache.py  test_block_holder.py  test_block_manager.py  test_block_tree.py  test_cacheOrchestrator.py  test_caption_generator.py  test_caption_integration.py  test_docker_manager_real_commands.py  test_errorHandler.py  test_favourites.py  test_filterParser.py  test_index.py  test_notionAPIClient.py  test_notionService.py  test_notion_client.py  test_responseProcessor.py  test_rest_server.py  test_utils.py
common/: .cursorrules  README.md  TODO.md  fix_import.py  pyproject.toml  setup.md  setup.py
common/.cursor/: imports.mdc  logs.mdc  overview.mdc
common/.cursor/rules/: overview.mdc
common/src/tz_common/: __init__.py  aitoolbox.py  json.py  langfuse.py  logs.py  timed_storage.py  uuid.py
common/tests/: __init__.py  test_imports.py  test_logs.py  test_uuid.py
common/tz_common/: __init__.py  action.py  aitoolbox.py  context.py  feedItem.py  json.py  logs.py  task.py  timed_storage.py  tool.py  tzrag.py  utils.py  yaml.py
common/tz_common/actions/: __init__.py  action.py
common/tz_common/langchain_wrappers/: __init__.py  agentState.py  graphFunctions.py  message.py  taskTools.py  tool.py
common/tz_common/tasks/: __init__.py  task.py
(+149 files in other folders)
