[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tz-common"
version = "0.9.0"
description = "Utilities for agentic projects"
authors = [
	{name = "Tomasz Zieliński"}
]
requires-python = ">=3.9"
dependencies = [
	"pydantic>=1.10.8,<2.0.0",
	"termcolor",
	"pillow",
	"langfuse==2.59.3",
	"langgraph==0.1.5",
]

[project.optional-dependencies]
dev = [
	"black",
	"flake8",
	"mypy",
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = ["tz_common", "tz_common.langchain_wrappers", "tz_common.tasks", "tz_common.actions"]
package-dir = {"" = "src"} 