[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notion_agent"
version = "0.1.0"
description = "Agent for interacting with Notion workspaces"
authors = [
	{name = "Author"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	# Core HTTP
	"httpx>=0.27.0",
	
	# Pydantic and validation
	"pydantic>=1.10.22,<2.0.0",
	"typing_extensions>=4.12.2",
	
	# LangChain ecosystem
	"langchain-community>=0.2.6",
	"langchain-core>=0.2.11",
	"langchain-openai>=0.1.14",
	"langgraph>=0.1.5",
	
	# Configuration and utilities
	"python-dotenv>=1.0.1",
	
	# Web framework
	"Flask>=3.0.3",
	
	# Async utilities
	"nest-asyncio",
	
	# Local dependencies
	"tz-common>=0.9.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.2.2",
	"pytest-asyncio>=0.25.0",
]

jupyter = [
	# Jupyter ecosystem (optional)
	"marimo>=0.11.0",
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = ["Agent", "operations", "launcher", "tests"]

[tool.uv]
index-url = "https://pypi.org/simple" 